@@ -152,6 +152,7 @@ PANOPTICON_TASKTYPE_REFRESHSITEINFO=Refresh Site Information
 PANOPTICON_TASKTYPE_REFRESHINSTALLEDEXTENSIONS=Refresh Installed Extensions
 PANOPTICON_TASKTYPE_SENDMAIL=Send Enqueued Email Messages
 PANOPTICON_TASKTYPE_JOOMLAUPDATEDIRECTOR=Schedule Automatic Joomla Update
+PANOPTICON_TASKTYPE_SELFUPDATEFINDER="Find Panopticon updates"
 
 ;; Joomla Update Task
 PANOPTICON_TASK_JOOMLAUPDATE_ERR_SITE_DISABLED=Site %d is disabled
@@ -1091,6 +1092,7 @@ PANOPTICON_MAILTEMPLATES_OPT_TYPE_AKEEBABACKUP_SUCCESS=Akeeba Backup: Successful
 PANOPTICON_MAILTEMPLATES_OPT_TYPE_AKEEBABACKUP_FAIL=Akeeba Backup: Failed backup
 PANOPTICON_MAILTEMPLATES_OPT_TYPE_EXTENSION_UPDATE_FOUND=Joomla! Extension Update: Update Found
 PANOPTICON_MAILTEMPLATES_OPT_TYPE_EXTENSIONS_UPDATE_DONE=Joomla! Extension Update: Autoupdate Results
+PANOPTICON_MAILTEMPLATES_OPT_TYPE_SELFUPDATE_FOUND=Panopticon: Update found
 PANOPTICON_MAILTEMPLATES_LBL_CSS_HEAD=This CSS will be added to all HTML emails sent by Panopticon.
 
 ;; SelfUpdate
