@@ -4,6 +4,7 @@ Akeeba Panopticon 1.0.2
 + TOTP Multi-factor Authentication (gh-168)
 + Extensions Update Overview page (gh-178)
 + Core Updates Overview page (gh-178)
++ Automated task to check for self-updates (gh-174)
 ~ Improve behavior clicking Edit without selecting a site
 ~ Improve the TOTP method selection layout
 # [LOW] Missing email template type for failed Joomla! update
